crates/ir/tests/snapshots/lower_test__extern_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern_basic

type Ordering = LT#0 | EQ#1 | GT#2
type Result[e, f] = Ok#0(b) | Err#1(a)
type Option[g] = Some#0(c) | None#1
type List[h] = Cons#0(d, List[d]) | Nil#1
