crates/ir/tests/snapshots/lower_test__extern_codegen_println.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern_codegen_println

type Ordering = LT#0 | EQ#1 | GT#2
type Result[e, f] = Ok#0(b) | Err#1(a)
type List[g] = Cons#0(c, List[c]) | Nil#1
type Option[h] = Some#0(d) | None#1

fn f0 main() -> Int =
  let v0: Unit = call f1("hello")
  0
