crates/ir/tests/snapshots/lower_test__extern_java_actor.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern_java_actor

; extern actor_ref
; extern receive
; extern send

fn echo(v0: Mailbox[Int]) -> Unit =
  let v1: Int = call receive(v0)
  let v2: Ref[Int] = call actor_ref(v0)
  let v3: Unit = call send(v2, v1)
  v3

fn use_ref(v4: Ref[Int]) -> Unit =
  let v5: Unit = call send(v4, 42)
  v5

fn main() -> (Mailbox[Int]) -> Unit =
  let v6: (Mailbox[Int]) -> Unit = make_closure(echo, [])
  v6
