crates/ir/tests/snapshots/lower_test__extern_no_methods.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module extern_no_methods
